--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ form .name-details .field:last-child {
 
 .form form .field {
   display: flex;
+  position: relative;
   flex-direction: column;
   margin-bottom: 10px;
 }
@@ -96,6 +97,15 @@ form .name-details .field:last-child {
   background: #333;
   color: #fff;
   border-radius: 5px;
+  cursor: pointer;
+}
+
+.form form .field i {
+  position: absolute;
+  right: 15px;
+  color: #ccc;
+  top: 70%;
+  transform: translateY(-50%);
   cursor: pointer;
 }
 
